Added PassionOne/Lato/Oswald fonts from GoogleFonts

--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -129,5 +129,8 @@ table {
 }
 * {
     box-sizing: border-box;
-    font-family: "Roboto", sans-serif;
 }
+
+/* font-family: 'Lato', sans-serif;
+font-family: 'Oswald', sans-serif;
+font-family: 'Passion One', cursive; */
