implement post without tag click

--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -132,6 +132,13 @@ table {
 }
 body {
   font-family: "Lato", sans-serif;
+  background: #333333;
+}
+strong {
+  font-weight: bold;
+}
+a {
+  text-decoration: none;
 }
 
 /* font-family: 'Lato', sans-serif;
